02-ingressroute-nginx.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress-route
  namespace: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`nginx.ddc-k8s.ml`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: nginx-service
      # namespace: nginx
      port: 80
  tls:
    secretName: nginx.ddc-k8s.ml
